fix racy conditions in handling addShard from 3.2 mongos

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.3.11
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 18 (08/05/16)
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Fixes the following bugs:

      • use kNoWaitWriteConcern for performing the local update to config.shards in the callback for the shardIdentity upsert
      • release the _addShardHandlesMutex before the local update to config.shards
      • use Client::initThreadIfNotAlready instead of Client::initThread and Client::destroy

            Assignee:
            Esha Maharishi (Inactive)
            Reporter:
            Esha Maharishi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: