SERVER-25133 fix racy conditions in handling addShard from 3.2 mongos